k8s-apps/ingress-nginx/templates-unused/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnel
  annotations:
    tailscale.com/funnel: "true"
    # external-dns.alpha.kubernetes.io/target: home.terence.cloud
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: ingress-nginx-controller
      port:
        name: https
  tls:
    - hosts:
      - k8s-ingress
